fixed logo text alignment issue on smaller phones

--- a/style.css
+++ b/style.css
@@ -79,8 +79,9 @@ body{
         font-size:larger;
         font-weight: bold;
         font-family: "Intro Head R Base";
-        font-size: 2rem;
+        font-size: 1.5rem;
         letter-spacing: 0.2rem;
+        
        
     }   
     img{
